// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return production gitlab global env 1`] = `
Object {
  "annotations": Object {
    "app.gitlab.com/app": "socialgouv-sample",
    "app.gitlab.com/env": "my-test",
    "app.gitlab.com/env.name": "fabrique-dev",
  },
  "domain": "dev.fabrique.social.gouv.fr",
  "labels": Object {
    "application": "sample",
    "owner": "sample",
    "team": "sample",
  },
  "namespace": Object {
    "name": "sample",
  },
  "subdomain": "sample",
}
`;

exports[`should return tagged gitlab global env 1`] = `
Object {
  "annotations": Object {
    "app.gitlab.com/app": "socialgouv-sample",
    "app.gitlab.com/env": "my-test",
    "app.gitlab.com/env.name": "fabrique-dev",
  },
  "domain": "dev.fabrique.social.gouv.fr",
  "labels": Object {
    "application": "vX-Y-Z-sample",
    "owner": "sample",
    "team": "sample",
  },
  "namespace": Object {
    "name": "sample-42-my-test",
  },
  "subdomain": "vX-Y-Z-sample",
}
`;

exports[`should return the gitlab global env 1`] = `
Object {
  "annotations": Object {
    "app.gitlab.com/app": "socialgouv-sample",
    "app.gitlab.com/env": "my-test",
    "app.gitlab.com/env.name": "fabrique-dev",
  },
  "domain": "dev.fabrique.social.gouv.fr",
  "labels": Object {
    "application": "my-test-sample",
    "owner": "sample",
    "team": "sample",
  },
  "namespace": Object {
    "name": "sample-42-my-test",
  },
  "subdomain": "my-test-sample",
}
`;

exports[`should throw because of empty strings 1`] = `
"BadArgument:required property \\"CI_ENVIRONMENT_NAME\\"
└─ cannot decode \\"\\", should be NonEmptyString
required property \\"CI_ENVIRONMENT_SLUG\\"
└─ cannot decode \\"\\", should be NonEmptyString
required property \\"CI_PROJECT_NAME\\"
└─ cannot decode \\"\\", should be NonEmptyString
required property \\"CI_PROJECT_PATH_SLUG\\"
└─ cannot decode \\"\\", should be NonEmptyString
required property \\"KUBE_INGRESS_BASE_DOMAIN\\"
└─ cannot decode \\"\\", should be NonEmptyString
required property \\"KUBE_NAMESPACE\\"
└─ cannot decode \\"\\", should be NonEmptyString
optional property \\"CI_COMMIT_TAG\\"
└─ cannot decode \\"\\", should be NonEmptyString"
`;

exports[`should throw because of missing variables 1`] = `
"BadArgument:required property \\"CI_ENVIRONMENT_NAME\\"
└─ cannot decode undefined, should be string
required property \\"CI_ENVIRONMENT_SLUG\\"
└─ cannot decode undefined, should be string
required property \\"CI_PROJECT_NAME\\"
└─ cannot decode undefined, should be string
required property \\"CI_PROJECT_PATH_SLUG\\"
└─ cannot decode undefined, should be string
required property \\"KUBE_INGRESS_BASE_DOMAIN\\"
└─ cannot decode undefined, should be string
required property \\"KUBE_NAMESPACE\\"
└─ cannot decode undefined, should be string"
`;
